// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - TablePageLayout - TableRenderer Expect to match snapshot with basic props on desktop 1`] = `
<div>
  <div
    class="MuiTableContainer-root css-8cb3ox-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-qzyhip-MuiTable-root"
      data-testid="test"
    >
      <thead
        class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      />
      <tbody
        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      />
    </table>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-11ezxrp"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-1vbz8i-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-kqwn4m-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-19z5v8g"
          data-testid="total-undefined-count"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`common - TablePageLayout - TableRenderer Expect to match snapshot with basic props on mobile 1`] = `
<div>
  <div
    class="MuiTableContainer-root css-8cb3ox-MuiTableContainer-root"
  >
    <table
      class="MuiTable-root css-qzyhip-MuiTable-root"
      data-testid="test"
    >
      <thead
        class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
      />
      <tbody
        class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
      />
    </table>
  </div>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
  />
  <div
    class="MuiBox-root css-11ezxrp"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column-reverse MuiGrid-grid-xs-12 css-ykx38k-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-auto css-kqwn4m-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-19z5v8g"
          data-testid="total-undefined-count"
        />
      </div>
    </div>
  </div>
</div>
`;
